--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,9 @@
 .grid-cols-auto {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
+
+@media(max-width:765px){
+    .active p{
+        @apply text-white bg-primary
+    }
+}
